@@ -1,3 +1,7 @@
+  05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  pythonpy-9999.ebuild:
+  sys-apps/pythonpy: update nightly for distutils
+
   16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   pythonpy-9999.ebuild:
   sys-apps/pythonpy: allow python3_2
